# metropolis

./: Cargo.toml  README.md
.github/workflows/: release.yml
nix/: package.nix
packaging/aur/: PKGBUILD
src/: main.rs
src/city/: buildings.rs  mod.rs  people.rs
