[package]
name = "metropolis-tui"
version = "0.1.3"
edition = "2021"
rust-version = "1.80.0"
authors = ["5c0 <5c0@5c0.io>"]
description = "The cyberpunk city powered by your kernel metrics"
license = "MIT"
repository = "https://github.com/5c0/metropolis"
homepage = "https://github.com/5c0/metropolis"
documentation = "https://github.com/5c0/metropolis#readme"
keywords = ["tui", "system-monitor", "cyberpunk", "aesthetic", "rust"]
categories = ["visualization", "command-line-utilities"]
exclude = [
    "dist/",
    "packaging/",
    ".github/",
    ".gitignore",
    "flake.nix",
    "default.nix",
    "nix/",
    "install.sh",
    "docs/",
]

[[bin]]
name = "metropolis"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
rand = "0.8"
lexopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
